Update directory structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,13 @@ version = "0.1.0"
 authors = ["kenkoooo <kenkou.n@gmail.com>"]
 
 [dependencies]
+
+[[bin]]
+name = "cf17_final_a"
+path = "atcoder/cf17_final/cf17_final_a.rs"
+[[bin]]
+name = "cf17_final_b"
+path = "atcoder/cf17_final/cf17_final_b.rs"
+[[bin]]
+name = "cf17_final_c"
+path = "atcoder/cf17_final/cf17_final_c.rs"
