--- a/Cargo.toml
+++ b/Cargo.toml
@@ -150,3 +150,12 @@ path = "atcoder/abc075_d.rs"
 [[bin]]
 name = "code_festival_2017_quala_c"
 path = "atcoder/code_festival_2017_quala_c.rs"
+[[bin]]
+name = "agc022_a"
+path = "atcoder/agc022_a.rs"
+[[bin]]
+name = "agc022_b"
+path = "atcoder/agc022_b.rs"
+[[bin]]
+name = "agc022_c"
+path = "atcoder/agc022_c.rs"
