--- a/Cargo.toml
+++ b/Cargo.toml
@@ -177,3 +177,6 @@ path = "atcoder/abc061_d.rs"
 [[bin]]
 name = "grl_3_c"
 path = "aoj/grl_3_c.rs"
+[[bin]]
+name = "arc075_b"
+path = "atcoder/arc075_b.rs"
