--- a/Cargo.toml
+++ b/Cargo.toml
@@ -195,3 +195,6 @@ path = "atcoder/abc051_d.rs"
 [[bin]]
 name = "agc008_b"
 path = "atcoder/agc008_b.rs"
+[[bin]]
+name = "arc058_b"
+path = "atcoder/arc058_b.rs"
