--- a/Cargo.toml
+++ b/Cargo.toml
@@ -285,3 +285,6 @@ path = "atcoder/agc014_b.rs"
 [[bin]]
 name = "arc059_b"
 path = "atcoder/arc059_b.rs"
+[[bin]]
+name = "abc096_d"
+path = "atcoder/abc096_d.rs"
