--- a/Cargo.toml
+++ b/Cargo.toml
@@ -342,3 +342,6 @@ path = "atcoder/agc024_c.rs"
 [[bin]]
 name = "agc024_d"
 path = "atcoder/agc024_d.rs"
+[[bin]]
+name = "arc086_b"
+path = "atcoder/arc086_b.rs"
