--- a/Cargo.toml
+++ b/Cargo.toml
@@ -375,3 +375,15 @@ path = "atcoder/agc005_c.rs"
 [[bin]]
 name = "codefestival_2016_qualB_d"
 path = "atcoder/codefestival_2016_qualB_d.rs"
+[[bin]]
+name = "bitflyer2018_qual_d"
+path = "atcoder/bitflyer2018_qual_d.rs"
+[[bin]]
+name = "bitflyer2018_qual_c"
+path = "atcoder/bitflyer2018_qual_c.rs"
+[[bin]]
+name = "bitflyer2018_qual_a"
+path = "atcoder/bitflyer2018_qual_a.rs"
+[[bin]]
+name = "bitflyer2018_qual_b"
+path = "atcoder/bitflyer2018_qual_b.rs"
