--- a/Cargo.toml
+++ b/Cargo.toml
@@ -387,3 +387,6 @@ path = "atcoder/bitflyer2018_qual_a.rs"
 [[bin]]
 name = "bitflyer2018_qual_b"
 path = "atcoder/bitflyer2018_qual_b.rs"
+[[bin]]
+name = "codefestival_2016_final_d"
+path = "atcoder/codefestival_2016_final_d.rs"
