--- a/Cargo.toml
+++ b/Cargo.toml
@@ -393,3 +393,6 @@ path = "atcoder/codefestival_2016_final_d.rs"
 [[bin]]
 name = "arc068_c"
 path = "atcoder/arc068_c.rs"
+[[bin]]
+name = "arc069_c"
+path = "atcoder/arc069_c.rs"
