--- a/Cargo.toml
+++ b/Cargo.toml
@@ -420,3 +420,6 @@ path = "atcoder/agc013_c.rs"
 [[bin]]
 name = "agc015_c"
 path = "atcoder/agc015_c.rs"
+[[bin]]
+name = "agc016_b"
+path = "atcoder/agc016_b.rs"
