--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "rust-programming-contest-solutions"
 version = "0.1.0"
 authors = ["kenkoooo <kenkou.n@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 rand = "0.5"
