--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,7 @@
-[workspace]
-members = [
-    "workspace",
-    "readme-generator"
-]
+[package]
+name = "rust-programming-contest-solutions"
+version = "0.1.0"
+authors = ["kenkoooo <kenkou.n@gmail.com>"]
+edition = "2018"
+
+[dependencies]
