--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2018"
 
 [dependencies]
 rand = "0.7"
+num-bigint = "0.3.0"
+competitive-programming-rs = { path = "../competitive-programming-rs" }
